{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 11,
  "lineage": "5283b8e0-1c09-c3b7-c417-d99270edfea0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e999cbd62129e3b1",
            "arn": "arn:aws:ec2:us-west-2:546339163113:instance/i-0efa920b84fbf46c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efa920b84fbf46c8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zabbix",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f782f5814ff8080e",
            "private_dns": "ip-11-0-0-57.us-west-2.compute.internal",
            "private_ip": "11.0.0.57",
            "public_ip": "34.221.152.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8d5374f29bc3593",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a402d2c45f8721d6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d9d5be74044395",
            "tags": {
              "Name": "Testing-ec2_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a402d2c45f8721d6"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sg",
            "aws_subnet.sn1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546339163113:internet-gateway/igw-0e840859ff23f4165",
            "id": "igw-0e840859ff23f4165",
            "owner_id": "546339163113",
            "tags": {
              "Name": "tfm-igw"
            },
            "vpc_id": "vpc-0628e8c18669d0b37"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tbl-tfm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e2bc889a4b5cf015",
            "owner_id": "546339163113",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e840859ff23f4165",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0628e8c18669d0b37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc05f7a481b55922",
            "route_table_id": "rtb-0e2bc889a4b5cf015",
            "subnet_id": "subnet-0a8d9d5be74044395"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.tbl-tfm",
            "aws_subnet.sn1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546339163113:security-group/sg-0a402d2c45f8721d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a402d2c45f8721d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Loadb balancer sg",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210216052159657800000001",
            "name_prefix": "terraform-",
            "owner_id": "546339163113",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0628e8c18669d0b37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546339163113:subnet/subnet-0a8d9d5be74044395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.0.0/24",
            "id": "subnet-0a8d9d5be74044395",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "546339163113",
            "tags": {
              "Name": "sb1"
            },
            "vpc_id": "vpc-0628e8c18669d0b37"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546339163113:subnet/subnet-0470b59076520b364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.5.0/24",
            "id": "subnet-0470b59076520b364",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "546339163113",
            "tags": {
              "Name": "sb2"
            },
            "vpc_id": "vpc-0628e8c18669d0b37"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:546339163113:vpc/vpc-0628e8c18669d0b37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0942781fde118321e",
            "default_route_table_id": "rtb-0014063a960e683f1",
            "default_security_group_id": "sg-07ee0ed711f4e956e",
            "dhcp_options_id": "dopt-b8e061c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0628e8c18669d0b37",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0014063a960e683f1",
            "owner_id": "546339163113",
            "tags": {
              "Name": "vpc_var"
            }
          }
        }
      ]
    }
  ]
}